# game2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AI_ASSISTANT_GUIDE.md  CMakeLists.txt  CMakePresets.json  GAME_PITCH.md  GAME_PITCH_ALT.md  README.md  ROADMAP.md  SETUP_STATUS.md  client_main.cpp  imgui.ini  main.cpp  main_new.cpp  server_main.cpp  setup-and-build.ps1  setup.ps1  setup.sh  test_CMakeLists.txt  test_lz4.cpp  tmp_vbo.txt  tmp_vbo2.txt
.github/: copilot-instructions.md
assets/: README.md
assets/models/: README.md  grass.glb  grass2.glb  quantumFieldGenerator.glb
assets/textures/: README.md
docs/: CustomPhysicsSystem.md  EntitySynchronization.md  FluidSystemGuide.md  NetworkArchitecture.md  OpenGL_Standards.md  PerformanceOptimizations.md  ShaderStandardization.md  graphics_refactor.md
engine/: CMakeLists.txt  CMakeLists_new.txt  Player.cpp  Player.h  pch.cpp  pch.h
engine/Assets/: GLBLoader.cpp  GLBLoader.h
engine/Core/: DebugDiagnostics.cpp  DebugDiagnostics.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  GameState.cpp  GameState.h  Profiler.cpp  Profiler.h  Window.cpp  Window.h  main.cpp
engine/Culling/: FrustumCuller.cpp  FrustumCuller.h
engine/ECS/: ECS.cpp  ECS.h
engine/Input/: Camera.cpp  Camera.h  ChatSystem.cpp  ChatSystem.h  PlayerController.cpp  PlayerController.h
engine/Lighting/: LightSource.cpp  LightSource.h  RaycastLighting.cpp  RaycastLighting.h
engine/Math/: Mat4.cpp  Mat4.h  Vec3.cpp  Vec3.h
engine/Network/: IntegratedServer.cpp  IntegratedServer.h  NetworkClient.cpp  NetworkClient.h  NetworkManager.cpp  NetworkManager.h  NetworkMessages.h  VoxelCompression.cpp  VoxelCompression.h
engine/Physics/: FluidSystem.cpp  FluidSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
engine/Profiling/: DebugDiagnostics.cpp  DebugDiagnostics.h  PerformanceProfiler.cpp  Profiler.cpp  Profiler.h
engine/Rendering/: BlockHighlightRenderer.cpp  BlockHighlightRenderer.h  BloomRenderer.cpp  BloomRenderer.h  CascadedShadowMap.cpp  CascadedShadowMap.h  ComputeShader.cpp  ComputeShader.h  GPUMeshGenerator.cpp  GPUMeshGenerator.h  GlobalLightingManager.cpp  GlobalLightingManager.h  LitShader.cpp  LitShader.h  MDIRenderer.cpp  MDIRenderer.h  ModelInstanceRenderer.cpp  ModelInstanceRenderer.h  ModernRenderer_glm.cpp  ModernRenderer_new.cpp  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  STBImpl.cpp  ShadowMap.cpp  ShadowMap.h  ShadowMapper.cpp  ShadowMapper.h  ShadowPass.cpp  ShadowPass.h  ShadowShader.cpp  ShadowShader.h  SimpleShader.cpp  SimpleShader.h  SkyRenderer.cpp  SkyRenderer.h  TextureManager.cpp  TextureManager.h  VBORenderer.cpp  (+5 more)
engine/Threading/: JobSystem.cpp  JobSystem.h
engine/Time/: DayNightController.cpp  DayNightController.h  DayNightCycle.cpp  DayNightCycle.h  DayNightCycle_new.cpp  TimeEffects.cpp  TimeEffects.h  TimeManager.cpp  TimeManager.h
engine/UI/: HUD.cpp  HUD.h  Inventory.cpp  Inventory.h  PeriodicTableUI.cpp  PeriodicTableUI.h
engine/World/: BlockProperties.h  BlockType.cpp  BlockType.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ConnectivityAnalyzer.cpp  ConnectivityAnalyzer.h  ConnectivityTest.cpp  ConnectivityTest.h  ElementRecipes.cpp  ElementRecipes.h  Island.cpp  Island.h  IslandChunkSystem.cpp  IslandChunkSystem.h  MeshGenerator.cpp  MeshGenerator.h  VoronoiIslandPlacer.cpp  VoronoiIslandPlacer.h  VoxelChunk.cpp  VoxelChunk.h  VoxelChunk_new.h  VoxelRaycaster.cpp  VoxelRaycaster.h  VoxelRaycaster_old.cpp
libs/: CMakeLists.txt
libs/glad/include/KHR/: khrplatform.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/lz4/: lz4.h  lz4_impl.c  lz4_simple.c
libs/tinygltf/: json.hpp
scripts/: ai-friendly-build.ps1  build-debug.ps1  force-rebuild.ps1  run-debug.ps1
shaders/: basic.frag  basic.vert  deferred.frag  deferred.vert  geometry.frag  geometry.vert  mdi.vert  postprocess.frag  postprocess.vert  voxel_mesh_gen.comp
tools/: README-clang-tidy.md  run-clang-tidy.ps1
